// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Components|Layout addon panel in right 1`] = `
<div
  class="css-1dfemhp"
>
  <div
    class="SplitPane  vertical "
    style="display:flex;flex:1;height:100%;position:absolute;outline:none;overflow:hidden;-moz-user-select:text;-webkit-user-select:text;-ms-user-select:text;user-select:text;flex-direction:row;left:0;right:0"
  >
    <div
      class="Pane vertical Pane1  "
      style="flex:none;position:relative;outline:none;width:250px"
    >
      <div
        class="css-1so1enu"
      >
        <div
          class="css-a8tcv7"
        >
          <div
            style="position:absolute;height:100%;width:100%;color:white;background:#4abdac"
          >
            Stories
          </div>
        </div>
        <div
          class="css-jjd33c"
        >
          <div
            class="css-jv2gl8"
          />
        </div>
      </div>
    </div>
    <span
      class="Resizer vertical "
      style="cursor:col-resize;height:auto;width:10px;z-index:1"
    />
    <div
      class="Pane vertical Pane2  "
      style="flex:1;position:relative;outline:none"
    >
      <div
        class="SplitPane  vertical "
        style="display:flex;flex:1;height:100%;position:absolute;outline:none;overflow:hidden;-moz-user-select:text;-webkit-user-select:text;-ms-user-select:text;user-select:text;flex-direction:row;left:0;right:0"
      >
        <div
          class="Pane vertical Pane1  "
          style="overflow:auto;flex:1;position:relative;outline:none"
        >
          <div
            class="css-1czpjwe"
          >
            <div
              class="css-165xhya"
            />
            <div
              class="css-adfvcn"
            >
              <div
                style="position:absolute;height:100%;width:100%;color:white;background:#f7b733"
              >
                Preview
              </div>
            </div>
          </div>
        </div>
        <span
          class="Resizer vertical "
          style="cursor:col-resize;height:100%;width:10px;z-index:1"
        />
        <div
          class="Pane vertical Pane2  "
          style="flex:none;position:relative;outline:none;width:400px"
        >
          <div
            class="css-8umvy9"
          >
            <div
              class="css-1jvx458"
            >
              <div
                class="css-jv2gl8"
              />
            </div>
            <div
              style="position:absolute;height:100%;width:100%;color:white;background:#fc4a1a"
            >
              Addon
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Components|Layout default 1`] = `
<div
  class="css-1dfemhp"
>
  <div
    class="SplitPane  vertical "
    style="display:flex;flex:1;height:100%;position:absolute;outline:none;overflow:hidden;-moz-user-select:text;-webkit-user-select:text;-ms-user-select:text;user-select:text;flex-direction:row;left:0;right:0"
  >
    <div
      class="Pane vertical Pane1  "
      style="flex:none;position:relative;outline:none;width:250px"
    >
      <div
        class="css-1so1enu"
      >
        <div
          class="css-a8tcv7"
        >
          <div
            style="position:absolute;height:100%;width:100%;color:white;background:#4abdac"
          >
            Stories
          </div>
        </div>
        <div
          class="css-jjd33c"
        >
          <div
            class="css-jv2gl8"
          />
        </div>
      </div>
    </div>
    <span
      class="Resizer vertical "
      style="cursor:col-resize;height:auto;width:10px;z-index:1"
    />
    <div
      class="Pane vertical Pane2  "
      style="flex:1;position:relative;outline:none"
    >
      <div
        class="SplitPane  horizontal "
        style="display:flex;flex:1;height:100%;position:absolute;outline:none;overflow:hidden;-moz-user-select:text;-webkit-user-select:text;-ms-user-select:text;user-select:text;bottom:0;flex-direction:column;min-height:100%;top:0;width:100%"
      >
        <div
          class="Pane horizontal Pane1  "
          style="overflow:auto;flex:1;position:relative;outline:none"
        >
          <div
            class="css-ysp1on"
          >
            <div
              class="css-165xhya"
            />
            <div
              class="css-adfvcn"
            >
              <div
                style="position:absolute;height:100%;width:100%;color:white;background:#f7b733"
              >
                Preview
              </div>
            </div>
          </div>
        </div>
        <span
          class="Resizer horizontal "
          style="cursor:row-resize;height:10px;width:100%;z-index:1"
        />
        <div
          class="Pane horizontal Pane2  "
          style="flex:none;position:relative;outline:none;height:200px;display:flex"
        >
          <div
            class="css-1ssjsmz"
          >
            <div
              class="css-1tog424"
            >
              <div
                class="css-12krn9q"
              />
            </div>
            <div
              style="position:absolute;height:100%;width:100%;color:white;background:#fc4a1a"
            >
              Addon
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Components|Layout full screen 1`] = `
<div
  class="css-1dfemhp"
>
  <div
    class="SplitPane  vertical disabled"
    style="display:flex;flex:1;height:100%;position:absolute;outline:none;overflow:hidden;-moz-user-select:text;-webkit-user-select:text;-ms-user-select:text;user-select:text;flex-direction:row;left:0;right:0"
  >
    <div
      class="Pane vertical Pane1  "
      style="flex:none;position:relative;outline:none;width:1px"
    >
      <div
        class="css-w5nx2k"
      >
        <div
          class="css-a8tcv7"
        >
          <div
            style="position:absolute;height:100%;width:100%;color:white;background:#4abdac"
          >
            Stories
          </div>
        </div>
        <div
          class="css-jjd33c"
        >
          <div
            class="css-jv2gl8"
          />
        </div>
      </div>
    </div>
    <span
      class="Resizer vertical disabled"
      style="height:auto;width:10px;z-index:1"
    />
    <div
      class="Pane vertical Pane2  "
      style="flex:1;position:relative;outline:none"
    >
      <div
        class="SplitPane  horizontal disabled"
        style="display:flex;flex:1;height:100%;position:absolute;outline:none;overflow:hidden;-moz-user-select:text;-webkit-user-select:text;-ms-user-select:text;user-select:text;bottom:0;flex-direction:column;min-height:100%;top:0;width:100%"
      >
        <div
          class="Pane horizontal Pane1  "
          style="overflow:auto;flex:1;position:relative;outline:none"
        >
          <div
            class="css-ysp1on"
          >
            <div
              class="css-165xhya"
            />
            <div
              class="css-19sdkk7"
            >
              <div
                style="position:absolute;height:100%;width:100%;color:white;background:#f7b733"
              >
                Preview
              </div>
            </div>
          </div>
        </div>
        <span
          class="Resizer horizontal disabled"
          style="height:10px;width:100%;z-index:1"
        />
        <div
          class="Pane horizontal Pane2  "
          style="flex:none;position:relative;outline:none;height:1px;display:flex"
        >
          <div
            class="css-lw0tx4"
          >
            <div
              class="css-1tog424"
            >
              <div
                class="css-12krn9q"
              />
            </div>
            <div
              style="position:absolute;height:100%;width:100%;color:white;background:#fc4a1a"
            >
              Addon
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Components|Layout mobile 1`] = `
<div
  class="css-vzm1uf"
>
  <div>
    <div
      class="css-1ebwt9d"
    >
      <div
        class="css-ogka8q"
      >
        <div
          class="css-17i7p52"
          role="tab"
        >
          Navigator
        </div>
        <div
          class="css-1rybdg4"
          role="tab"
        >
          Preview
        </div>
        <div
          class="css-17i7p52"
          role="tab"
        >
          Addons
        </div>
      </div>
    </div>
    <div
      class="css-gyrv08"
    >
      <div
        class="css-a8tcv7"
      >
        <div
          style="position:absolute;height:100%;width:100%;color:white;background:#4abdac"
        >
          Stories
        </div>
      </div>
    </div>
    <div
      class="css-1m9zc0l"
    >
      <div
        class="css-a8tcv7"
      >
        <div
          style="position:absolute;height:100%;width:100%;color:white;background:#f7b733"
        >
          Preview
        </div>
      </div>
    </div>
    <div
      class="css-gyrv08"
    >
      <div
        style="position:absolute;height:100%;width:100%;color:white;background:#fc4a1a"
      >
        Addon
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Components|Layout no addon panel 1`] = `
<div
  class="css-1dfemhp"
>
  <div
    class="SplitPane  vertical "
    style="display:flex;flex:1;height:100%;position:absolute;outline:none;overflow:hidden;-moz-user-select:text;-webkit-user-select:text;-ms-user-select:text;user-select:text;flex-direction:row;left:0;right:0"
  >
    <div
      class="Pane vertical Pane1  "
      style="flex:none;position:relative;outline:none;width:250px"
    >
      <div
        class="css-1so1enu"
      >
        <div
          class="css-a8tcv7"
        >
          <div
            style="position:absolute;height:100%;width:100%;color:white;background:#4abdac"
          >
            Stories
          </div>
        </div>
        <div
          class="css-jjd33c"
        >
          <div
            class="css-jv2gl8"
          />
        </div>
      </div>
    </div>
    <span
      class="Resizer vertical "
      style="cursor:col-resize;height:auto;width:10px;z-index:1"
    />
    <div
      class="Pane vertical Pane2  "
      style="flex:1;position:relative;outline:none"
    >
      <div
        class="SplitPane  horizontal disabled"
        style="display:flex;flex:1;height:100%;position:absolute;outline:none;overflow:hidden;-moz-user-select:text;-webkit-user-select:text;-ms-user-select:text;user-select:text;bottom:0;flex-direction:column;min-height:100%;top:0;width:100%"
      >
        <div
          class="Pane horizontal Pane1  "
          style="overflow:auto;flex:1;position:relative;outline:none"
        >
          <div
            class="css-ysp1on"
          >
            <div
              class="css-165xhya"
            />
            <div
              class="css-adfvcn"
            >
              <div
                style="position:absolute;height:100%;width:100%;color:white;background:#f7b733"
              >
                Preview
              </div>
            </div>
          </div>
        </div>
        <span
          class="Resizer horizontal disabled"
          style="height:10px;width:100%;z-index:1"
        />
        <div
          class="Pane horizontal Pane2  "
          style="flex:none;position:relative;outline:none;height:1px;display:flex"
        >
          <div
            class="css-lw0tx4"
          >
            <div
              class="css-1tog424"
            >
              <div
                class="css-12krn9q"
              />
            </div>
            <div
              style="position:absolute;height:100%;width:100%;color:white;background:#fc4a1a"
            >
              Addon
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Components|Layout no stories panel 1`] = `
<div
  class="css-1dfemhp"
>
  <div
    class="SplitPane  vertical disabled"
    style="display:flex;flex:1;height:100%;position:absolute;outline:none;overflow:hidden;-moz-user-select:text;-webkit-user-select:text;-ms-user-select:text;user-select:text;flex-direction:row;left:0;right:0"
  >
    <div
      class="Pane vertical Pane1  "
      style="flex:none;position:relative;outline:none;width:1px"
    >
      <div
        class="css-w5nx2k"
      >
        <div
          class="css-a8tcv7"
        >
          <div
            style="position:absolute;height:100%;width:100%;color:white;background:#4abdac"
          >
            Stories
          </div>
        </div>
        <div
          class="css-jjd33c"
        >
          <div
            class="css-jv2gl8"
          />
        </div>
      </div>
    </div>
    <span
      class="Resizer vertical disabled"
      style="height:auto;width:10px;z-index:1"
    />
    <div
      class="Pane vertical Pane2  "
      style="flex:1;position:relative;outline:none"
    >
      <div
        class="SplitPane  horizontal "
        style="display:flex;flex:1;height:100%;position:absolute;outline:none;overflow:hidden;-moz-user-select:text;-webkit-user-select:text;-ms-user-select:text;user-select:text;bottom:0;flex-direction:column;min-height:100%;top:0;width:100%"
      >
        <div
          class="Pane horizontal Pane1  "
          style="overflow:auto;flex:1;position:relative;outline:none"
        >
          <div
            class="css-ysp1on"
          >
            <div
              class="css-165xhya"
            />
            <div
              class="css-adfvcn"
            >
              <div
                style="position:absolute;height:100%;width:100%;color:white;background:#f7b733"
              >
                Preview
              </div>
            </div>
          </div>
        </div>
        <span
          class="Resizer horizontal "
          style="cursor:row-resize;height:10px;width:100%;z-index:1"
        />
        <div
          class="Pane horizontal Pane2  "
          style="flex:none;position:relative;outline:none;height:200px;display:flex"
        >
          <div
            class="css-1ssjsmz"
          >
            <div
              class="css-1tog424"
            >
              <div
                class="css-12krn9q"
              />
            </div>
            <div
              style="position:absolute;height:100%;width:100%;color:white;background:#fc4a1a"
            >
              Addon
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
